--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 </head>
 
 <body>
-    <header>
+    <header class="bar">
         <img src="assets/Iconix_Studio.png" alt="ICONIX">
         <h1>Iconix Studio</h1>
     </header>
+
+
+
     <article class="front-page">
         <img src="assets/vinor_1.webp" alt="">
         <section class="dev-team">
